User can see prompt for current letter.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Typing Test</h1>
       </header>
     </div>
-    <div class="container" id="typeBox">
-        <span class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+    <div class="container"  id="typeBox">
+        <span id="text"><b>L</b>orem ipsum dolor sit amet, consectetur adipiscing elit.</span>
     </div>
     <script src="main.js"></script>
   </body>
